--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h1>Digital Economy News</h1>
                     <p>Get the latest news about digital economy refreshing...</p>
                     <div class="btn">
-                        <a href="" class="refresh">News</a>
+                        <button type="submit" id="refresh" >News</button>
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
     </section>
     
     <!-- News Section -->
-    <section class="news">
+    <section class="news-container">
 
     </section>
 
