--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Author: Monroy Vélazquez Alejandra Sarahí -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
                     <h1>Digital Economy News</h1>
                     <p>Get the latest news about digital economy refreshing...</p>
                     <div class="btn">
-                        <button type="submit" id="refresh" >News</button>
+                        <button type="submit" id="refresh">Refresh News</button>
                     </div>
                 </div>
             </div>
